iptables/iptables.rules
# Generated by iptables-save v1.8.10 on Fri Oct  4 16:45:24 2024
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2075482:112502744]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "Allow traffic that belongs to established connections, or new valid traffic that is related to these connections" -j ACCEPT
-A INPUT -i lo -m comment --comment "Accept all traffic from the loopback interface" -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -m comment --comment "Drop all traffic with an INVALID state match" -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -m comment --comment "Accept all new incoming ICMP echo requests" -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -m comment --comment "Attach the UDP chain to the INPUT chain" -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "Attach the TCP chain to the INPUT chain" -j TCP
-A INPUT -p udp -m comment --comment "Reject UDP streams with ICMP port unreachable messages if the ports are not opened" -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m comment --comment "Reject TCP connections with TCP RESET packages if the ports are not opened" -j REJECT --reject-with tcp-reset
-A INPUT -m comment --comment "Reject all remaining incoming traffic with icmp protocol unreachable messages" -j REJECT --reject-with icmp-proto-unreachable
-A TCP -p tcp -m tcp --dport 80 -m comment --comment "Accept web servers" -j ACCEPT
-A TCP -p tcp -m tcp --dport 443 -m comment --comment "Accept secure web servers" -j ACCEPT
-A TCP -p tcp -m tcp --dport 22 -m comment --comment "Accept ssh connections" -j ACCEPT
-A TCP -p tcp -m tcp --dport 53 -m comment --comment "Accept dns server requests" -j ACCEPT
-A TCP -p tcp -m tcp --dport 17500 -m comment --comment "Reject Dropbox LAN sync broadcasts" -j REJECT --reject-with icmp-port-unreachable
-A TCP -p tcp -m tcp --dport 631 -m comment --comment "Internet Printing Protocol requests and responses (print jobs, status monitoring, etc.)" -j ACCEPT
-A TCP -p tcp -m tcp --dport 139 -m comment --comment "Windows SMB printing" -j ACCEPT
-A TCP -p tcp -m tcp --dport 445 -m comment --comment "Windows SMB Domain Server (authenticated SMB printing)" -j ACCEPT
-A UDP -p udp -m udp --dport 53 -m comment --comment "Accept dns server requests" -j ACCEPT
-A UDP -p udp -m udp --dport 5353 -m comment --comment "Multicast DNS lookups and service registrations" -j ACCEPT
-A UDP -p udp -m udp --dport 137 -m comment --comment "Windows Internet Naming Service (name lookup for SMB printing)" -j ACCEPT
COMMIT
# Completed on Fri Oct  4 16:45:24 2024
